Set cartier version as main deployment

--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Вебкам студия в Москве — Yes Studio | Работа моделью от 100 000₽</title>
-    <meta name="description" content="Вебкам студия Yes Studio в Москве. Non-nude формат, доход от 100 000₽/мес, еженедельные выплаты. Бесплатное обучение и личный менеджер. Оставьте заявку →" />
-    <link rel="canonical" href="https://yes-studio.agency/msk" />
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="ru_RU" />
-    <meta property="og:site_name" content="Yes Studio" />
+    <title>Yes Studio — Cartier Mid Variant</title>
     <link rel="icon" type="image/svg+xml" href="/mark.svg" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/main.tsx"></script>
+    <script type="module" src="/main-cartier.tsx"></script>
   </body>
 </html>
